# File-Profiler-Tool

./: .gitignore  Profiler  README.md  pyproject.toml
csv_profiler/: __main__.py  cli.py  profiler.py  reports.py
csv_profiler/tests/: __init__.py  sample_all_nulls.csv  sample_data.csv  test_profiler.py
