[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-profiler"
version = "0.1.0"
description = "A Python CLI tool for comprehensive CSV data profiling and analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Molly Scheitler", email = "mollyscheitler@example.com"}
]
requires-python = ">=3.7"
dependencies = [
    "click>=8.0.0"
]

[project.urls]
Homepage = "https://github.com/molly-scheitler/File-Profiler-Tool"
Repository = "https://github.com/molly-scheitler/File-Profiler-Tool.git"

[project.scripts]
csv-profiler = "csv_profiler.__main__:main"
